@@ -4,3 +4,4 @@ org.eclipse.linuxtools.lttng.ui/warn=false
 
 org.eclipse.linuxtools.lttng.ui/cfv=false
 org.eclipse.linuxtools.lttng.ui/rv=false
+org.eclipse.linuxtools.lttng.ui/sv=false
